[package]
name = "httpclient"
version = "0.21.3"
edition = "2021"
description = "HTTP client with middleware. Middleware provides composable support for record/replay, logging, exponential backoff, and more."
license = "MIT"
homepage = "https://github.com/kurtbuilds/httpclient"
repository = "https://github.com/kurtbuilds/httpclient"
documentation = "https://docs.rs/httpclient/"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.52"
cookie = { version = "0.18.0", features = ["percent-encode"] }
encoding_rs = "0.8.30"
futures = "0.3.25"
http = "0.2.11"
indexmap = "2.1.0"
regex = "1.7.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = "0.12.0"
tracing = "0.1.37"
urlencoding = "2.1.0"
walkdir = "2.3.2"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14.17", features = ["server"] }
hyper-rustls = "0.24.2"
tokio = { version = "1.17.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
