[package]
description = "HTTP client with middleware. Middleware provides composable support for record/replay, logging, exponential backoff, and more."
documentation = "https://docs.rs/httpclient/"
edition = "2021"
homepage = "https://github.com/kurtbuilds/httpclient"
license = "MIT"
name = "httpclient"
repository = "https://github.com/kurtbuilds/httpclient"
version = "0.23.16"

[lib]
doctest = false

[features]
mock = []

[dependencies]
async-trait = "0.1.52"
cookie = { version = "0.18.0", features = ["percent-encode"] }
encoding_rs = "0.8.30"
futures = "0.3.25"
http = { version = "1.1.0" }
indexmap = "2.1.0"
rand = "0.8.5"
regex = "1.7.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = "0.13.0"
tracing = "0.1.37"
urlencoding = "2.1.0"
walkdir = "2.3.2"
serde_path_to_error = { version = "0.1.16", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14.17", features = ["server"] }
hyper-rustls = "0.24.2"
tokio = { version = "1.17.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
