[package]
description = "HTTP client with middleware. Middleware provides composable support for record/replay, logging, exponential backoff, and more."
documentation = "https://docs.rs/httpclient/"
edition = "2021"
homepage = "https://github.com/kurtbuilds/httpclient"
license = "MIT"
name = "httpclient"
repository = "https://github.com/kurtbuilds/httpclient"
version = "0.26.0"

[lib]
doctest = false

[features]
mock = []
oauth2 = []
stream = []

[dependencies]
async-trait = "0.1.52"
bytes = "1.0"
cookie = { version = "0.18.0", features = ["percent-encode"] }
futures = "0.3.25"
futures-core = "0.3.25"
http = { version = "1.1.0" }
http-body = "1.0"
http-body-util = "0.1"
indexmap = "2.1.0"
rand = "0.9.0"
regex = "1.7.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = "0.14.0"
tracing = "0.1.37"
urlencoding = "2.1.0"
walkdir = "2.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.0", features = ["server", "http1", "http2", "client"] }
hyper-rustls = { version = "0.27" }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
tokio = { version = "1.17.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dev-dependencies]
text_io = "0.1.12"
tracing-subscriber = { version = "0.3.19" , features = ["env-filter"]}
